[gd_scene load_steps=11 format=3 uid="uid://ckb4vtimavoej"]

[ext_resource type="Theme" uid="uid://bhopjx6o3hegh" path="res://main_theme.tres" id="1_gy3gl"]
[ext_resource type="Script" uid="uid://d4ig5to6mecfh" path="res://scenes/card_ui/card_ui.gd" id="2_els2s"]
[ext_resource type="PackedScene" uid="uid://d4apfche1d33w" path="res://scenes/ui/card_visuals.tscn" id="3_ci03s"]
[ext_resource type="Script" uid="uid://cxer8henoxa2t" path="res://scenes/card_ui/card_state_machine.gd" id="3_psaan"]
[ext_resource type="Script" uid="uid://lq57yhcd5nlg" path="res://scenes/card_ui/card_states/card_base_state.gd" id="4_di10o"]
[ext_resource type="Script" uid="uid://dldfb5hjibo6u" path="res://scenes/card_ui/card_states/card_clicked_state.gd" id="5_p3btc"]
[ext_resource type="Script" uid="uid://dkhkc1d7ars7p" path="res://scenes/card_ui/card_states/card_draging_state.gd" id="6_orrkt"]
[ext_resource type="Script" uid="uid://c4idb0wnww0me" path="res://scenes/card_ui/card_states/card_released_state.gd" id="7_yxx8x"]
[ext_resource type="Script" uid="uid://djsmip5nqmr4q" path="res://scenes/card_ui/card_states/card_aiming_state.gd" id="8_yxx8x"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gy3gl"]
size = Vector2(25, 30)

[node name="CardUI" type="Control"]
custom_minimum_size = Vector2(25, 30)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -230.99997
offset_bottom = -114.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(12.5, 15)
theme = ExtResource("1_gy3gl")
script = ExtResource("2_els2s")

[node name="CardVisuals" parent="." instance=ExtResource("3_ci03s")]
layout_mode = 0
offset_right = 25.0
offset_bottom = 30.0

[node name="DropPointDetector" type="Area2D" parent="."]
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DropPointDetector"]
position = Vector2(12.5, 15)
shape = SubResource("RectangleShape2D_gy3gl")

[node name="CardStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_psaan")
initial_state = NodePath("CardBaseState")

[node name="CardBaseState" type="Node" parent="CardStateMachine"]
script = ExtResource("4_di10o")

[node name="CardClickedState" type="Node" parent="CardStateMachine"]
script = ExtResource("5_p3btc")
state = 1

[node name="CardDragingState" type="Node" parent="CardStateMachine"]
script = ExtResource("6_orrkt")
state = 2

[node name="CardReleasedState" type="Node" parent="CardStateMachine"]
script = ExtResource("7_yxx8x")
state = 4

[node name="CardAimingState" type="Node" parent="CardStateMachine"]
script = ExtResource("8_yxx8x")
state = 3
